# ffdoomclone

./: 3d.c  3d.d  3d.h  8x8Font.fnt  CMakeLists.txt  Dopefish.xcf  Engine.cpp  Engine.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  Makefile  Point.cpp  Point.hpp  TODO  Untitled.xcf  Vector.cpp  Vector.hpp  anim.d  anim.h  big_level.lvl  big_level_crash.lvl  camera.h  checkerboard.xcf  console.c  console.d  console.h  console_commands.c  console_commands.d  console_commands.h  editor.c  editor.d  editor.h  effect.c  effect.d  effect.h  engine.c  engine.d  engine.h  face.c  face.d  (+47 more)
TEMPLATES/: version.hxx.in
graphix/: default.rls  default_font_list.frl  default_texture_list.trl  skybox.xcf  terminator.xcf
graphix/xcf/: Dopefish (copy 1).xcf  checkerboard.xcf  dopefish.xcf  flau2.xcf  flaugunhandsTest.xcf  flauhands.xcf  flauhandsnew.xcf  flauhandsnewsmaller.xcf  grass.xcf  grassstep.xcf  missingtex.xcf  terminator.xcf  tinynumber.xcf  ui.xcf  wall.xcf
graphix/xcf/flau_arms/: editing_raw.xcf  pistol_fire.xcf  pistol_fire_0.xcf  pistol_fire_1.xcf  pistol_fire_2.xcf  pistol_fire_3.xcf  pistol_fire_4.xcf  pistol_idle.xcf  reduced.xcf  template.xcf  testing.xcf
graphix/xcf/flau_face/: flau2.xcf  flau_maniac.xcf  flau_neutral_blink.xcf  flau_neutral_left.xcf  flau_neutral_right.xcf  flau_sheet.xcf
lvls/: boxlevel  empty.lvl  level_flat.lvl  level_old  squarelevel
